--- a/embeddings.ipynb
+++ b/embeddings.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "c3d4ccfa",
    "metadata": {},
    "outputs": [
@@ -469,6 +469,41 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "id": "30f7cd97",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting python-Levenshtein\n",
+      "  Downloading python_levenshtein-0.27.1-py3-none-any.whl.metadata (3.7 kB)\n",
+      "Collecting Levenshtein==0.27.1 (from python-Levenshtein)\n",
+      "  Downloading levenshtein-0.27.1-cp311-cp311-win_amd64.whl.metadata (3.6 kB)\n",
+      "Collecting rapidfuzz<4.0.0,>=3.9.0 (from Levenshtein==0.27.1->python-Levenshtein)\n",
+      "  Downloading rapidfuzz-3.13.0-cp311-cp311-win_amd64.whl.metadata (12 kB)\n",
+      "Downloading python_levenshtein-0.27.1-py3-none-any.whl (9.4 kB)\n",
+      "Downloading levenshtein-0.27.1-cp311-cp311-win_amd64.whl (100 kB)\n",
+      "Downloading rapidfuzz-3.13.0-cp311-cp311-win_amd64.whl (1.6 MB)\n",
+      "   ---------------------------------------- 0.0/1.6 MB ? eta -:--:--\n",
+      "   ---------------------------------------- 1.6/1.6 MB 17.5 MB/s eta 0:00:00\n",
+      "Installing collected packages: rapidfuzz, Levenshtein, python-Levenshtein\n",
+      "\n",
+      "   ---------------------------------------- 0/3 [rapidfuzz]\n",
+      "   ---------------------------------------- 3/3 [python-Levenshtein]\n",
+      "\n",
+      "Successfully installed Levenshtein-0.27.1 python-Levenshtein-0.27.1 rapidfuzz-3.13.0\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install python-Levenshtein\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "id": "fb45b76b",
    "metadata": {},
@@ -481,14 +516,28 @@
       "Distribución: Counter({3: 91, 2: 91, 1: 88})\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           1       0.59      0.63      0.61        27\n",
-      "           2       0.50      0.33      0.40        27\n",
-      "           3       0.65      0.81      0.72        27\n",
+      "           1       0.72      0.67      0.69        27\n",
+      "           2       0.50      0.30      0.37        27\n",
+      "           3       0.55      0.81      0.66        27\n",
       "\n",
       "    accuracy                           0.59        81\n",
-      "   macro avg       0.58      0.59      0.58        81\n",
-      "weighted avg       0.58      0.59      0.58        81\n",
+      "   macro avg       0.59      0.59      0.57        81\n",
+      "weighted avg       0.59      0.59      0.57        81\n",
       "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\HP Pro\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\linear_model\\_logistic.py:465: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. OF ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n"
      ]
     }
    ],
@@ -496,12 +545,14 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import os\n",
+    "import Levenshtein\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.metrics.pairwise import cosine_similarity\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import classification_report\n",
     "from collections import Counter\n",
     "from scipy.spatial.distance import euclidean\n",
+    "\n",
     "\n",
     "# Asegúrate de tener definidas estas funciones (ya las tienes):\n",
     "# - anonimizar_codigo()\n",
@@ -530,13 +581,23 @@
     "    distancias = [-euclidean(e1, e2) for e1 in emb1 for e2 in emb2]\n",
     "\n",
     "    max_sim = max(distancias)\n",
+    "    min_sim = min(distancias)\n",
     "    avg_sim = np.mean(distancias)\n",
     "    count_95 = sum(1 for s in distancias if s > -0.05)\n",
     "    count_90 = sum(1 for s in distancias if s > -0.1)\n",
-    "\n",
+    "    \n",
+    "    total_pares = len(emb1) * len(emb2)\n",
+    "    prop_95 = count_95 / total_pares if total_pares > 0 else 0\n",
+    "    prop_90 = count_90 / total_pares if total_pares > 0 else 0\n",
+    "    \n",
     "    # TF-IDF similarity (cosine) entre todo el código de cada archivo\n",
     "    all_code1 = \" \".join(funcs1_anon)\n",
     "    all_code2 = \" \".join(funcs2_anon)\n",
+    "    \n",
+    "    lev_sim = 1 - Levenshtein.distance(all_code1, all_code2) / max(len(all_code1), len(all_code2))\n",
+    "    len_total_1 = len(all_code1.split())\n",
+    "    len_total_2 = len(all_code2.split())\n",
+    "    len_diff = abs(len_total_1 - len_total_2)\n",
     "\n",
     "    vectorizer = TfidfVectorizer()\n",
     "    tfidf_matrix = vectorizer.fit_transform([all_code1, all_code2])\n",
@@ -550,7 +611,9 @@
     "    union = tokens1.union(tokens2)\n",
     "    sim_jaccard = len(inter) / len(union) if union else 0.0\n",
     "\n",
-    "    return [max_sim, avg_sim, count_95, count_90, len(emb1), len(emb2), sim_tfidf, sim_jaccard]\n",
+    "    return [max_sim, avg_sim, min_sim, count_95, count_90, prop_95, prop_90, \n",
+    "    len(emb1), len(emb2), sim_tfidf, sim_jaccard, lev_sim, len_total_1, len_total_2, len_diff]\n",
+    "\n",
     "\n",
     "def entrenar_modelo_funcion_por_funcion(csv_path):\n",
     "    df = pd.read_csv(csv_path)\n",
@@ -582,27 +645,6 @@
     "        print(\"⚠️ Solo hay una clase en el dataset. No se puede entrenar.\")\n",
     "\n",
     "entrenar_modelo_funcion_por_funcion(\"pares.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 62,
-   "id": "30f7cd97",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: xgboost in c:\\users\\hp pro\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (3.0.1)\n",
-      "Requirement already satisfied: numpy in c:\\users\\hp pro\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from xgboost) (2.2.6)\n",
-      "Requirement already satisfied: scipy in c:\\users\\hp pro\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from xgboost) (1.15.2)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
-   "source": [
-    "pip install --upgrade xgboost\n"
    ]
   }
  ],
