--- a/embeddings.ipynb
+++ b/embeddings.ipynb
@@ -134,19 +134,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "id": "fe7aa5a3",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'pd' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 115\u001b[39m\n\u001b[32m    112\u001b[39m archivo_b = \u001b[33m\"\u001b[39m\u001b[33mdataset/par-9-a-behavior-propagation.py\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    114\u001b[39m \u001b[38;5;66;03m# Entrenar TF-IDF antes de comparar\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m115\u001b[39m df = \u001b[43mpd\u001b[49m.read_csv(\u001b[33m\"\u001b[39m\u001b[33mpares.csv\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m    116\u001b[39m lista_archivos = pd.concat([df[\u001b[33m\"\u001b[39m\u001b[33mcodigo_1\u001b[39m\u001b[33m\"\u001b[39m], df[\u001b[33m\"\u001b[39m\u001b[33mcodigo_2\u001b[39m\u001b[33m\"\u001b[39m]]).unique().tolist()\n\u001b[32m    117\u001b[39m corpus = [cargar_codigo(p) \u001b[38;5;28;01mfor\u001b[39;00m p \u001b[38;5;129;01min\u001b[39;00m lista_archivos]\n",
-      "\u001b[31mNameError\u001b[39m: name 'pd' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🔍 2 funciones en dataset/par-9-d-behavior-propagation.py\n",
+      "🔍 1 funciones en dataset/par-9-a-behavior-propagation.py\n",
+      "Sim f0 vs f0: TF-IDF=0.0123, CodeBERT=0.9989, Combinada=0.3083\n",
+      "Sim f1 vs f0: TF-IDF=0.5454, CodeBERT=0.9997, Combinada=0.6817\n",
+      "[np.float64(0.8365291084272196), np.float64(0.8405526007634928), np.float32(0.9748139), np.float32(0.98822546), np.float64(0.7772641984369827), 0.16129032258064516, 0.07637474541751532, 46, 449, 403]\n",
+      "\n",
+      "🧾 Matriz de similitud combinada:\n",
+      "[[0.3083]\n",
+      " [0.6817]]\n"
      ]
     }
    ],
